--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,7 @@
 version: 2.1
-
 orbs:
-  heroku: circleci/heroku@2.0.0
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-#jobs:
-  #build-and-test: 
-    #docker:
-      - #image: cimg/python:3.10.2
-    # Checkout the code as the first step. This is a dedicated CircleCI step.
-    # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
-    # Here we're making sure we use just use the system-wide pip. By default it uses the project root's requirements.txt.
-    # Then run your tests!
-    # CircleCI will report the results back to your VCS provider.
-    #steps:
-      - #checkout
-      - #python/install-packages:
-          #pkg-manager: pip
-          # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
-          # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
-      - #run:
-          #name: Run tests
-          # This assumes pytest is installed via the install-package step above
-          #command: pytest
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  heroku: circleci/heroku@0.0.10
 workflows:
-  heeroku_deploy: # This is the name of the workflow, feel free to change it to better match your workflow.
+  heroku_deploy:
     jobs:
       - heroku/deploy-via-git
