--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ dj-database-url==1.3.0
 Django==4.1.7
 django-heroku==0.3.1
 Flask==2.2.2
+gevent==1.2.1
 gunicorn==20.1.0
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==21.3
+passlib==1.7.0
 Pillow==9.4.0
 pluggy==1.0.0
 psycopg2==2.9.6
@@ -20,6 +22,7 @@ psycopg2-binary==2.9.6
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
+SQLAlchemy==1.1.5
 sqlparse==0.4.3
 tomli==2.0.1
 typing_extensions==4.5.0
