fix: Fixing the yml again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,14 @@ jobs:
       - image: "circleci/python:3.10"
     steps:
       - checkout
-      - echo "Running unit function tests..."
+      - run: echo "Running unit function tests..."
       - run: python3 test_main.py
 
   deploy: 
     docker:
       - image: "circleci/python:3.10"
     steps:
-      - echo "All tests passed. Deploying to Heroku."
+      - run: echo "All tests passed. Deploying to Heroku."
       - heroku/deploy-via-git
 
 workflows:
